src/tests/snapshots/alloy__tests__snapshot_tests.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/cases/maths.alloy
---
[
    Token {
        kind: LiteralInt,
        span: Span(
            0,
            1,
        ),
    },
    Token {
        kind: Minus,
        span: Span(
            2,
            3,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            4,
            5,
        ),
    },
    Token {
        kind: Plus,
        span: Span(
            6,
            7,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            8,
            9,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            11,
            12,
        ),
    },
    Token {
        kind: Slash,
        span: Span(
            13,
            14,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            14,
            15,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            17,
            18,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            19,
            20,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            22,
            23,
        ),
    },
    Token {
        kind: LessThan,
        span: Span(
            24,
            25,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            26,
            27,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            28,
            29,
        ),
    },
    Token {
        kind: GreaterThan,
        span: Span(
            30,
            31,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            32,
            33,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            34,
            35,
        ),
    },
    Token {
        kind: LessThanOrEqual,
        span: Span(
            36,
            38,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            39,
            41,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            42,
            44,
        ),
    },
    Token {
        kind: GreaterThanOrEqual,
        span: Span(
            45,
            47,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            48,
            50,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            51,
            53,
        ),
    },
    Token {
        kind: DoubleEquals,
        span: Span(
            54,
            56,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            57,
            59,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            60,
            62,
        ),
    },
    Token {
        kind: NotEquals,
        span: Span(
            63,
            65,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            66,
            68,
        ),
    },
    Token {
        kind: Exclamation,
        span: Span(
            70,
            71,
        ),
    },
    Token {
        kind: LiteralInt,
        span: Span(
            72,
            73,
        ),
    },
]
