src/tests/snapshots/alloy__tests__snapshot_tests@block-exprs.alloy-3.snap
---
source: src/tests/mod.rs
expression: checked.unwrap()
input_file: src/tests/cases/block-exprs.alloy
---
Ast(
    [
        Expression {
            kind: Infix {
                op: Subtract,
                lh: Expression {
                    kind: Infix {
                        op: Multiply,
                        lh: Expression {
                            kind: LiteralInt(
                                12,
                            ),
                            span: Span(
                                0,
                                2,
                            ),
                            state: Checked(
                                "Int",
                            ),
                        },
                        rh: Expression {
                            kind: Block(
                                [
                                    Expression {
                                        kind: Infix {
                                            op: Add,
                                            lh: Expression {
                                                kind: LiteralInt(
                                                    4,
                                                ),
                                                span: Span(
                                                    6,
                                                    7,
                                                ),
                                                state: Checked(
                                                    "Int",
                                                ),
                                            },
                                            rh: Expression {
                                                kind: LiteralInt(
                                                    5,
                                                ),
                                                span: Span(
                                                    10,
                                                    11,
                                                ),
                                                state: Checked(
                                                    "Int",
                                                ),
                                            },
                                        },
                                        span: Span(
                                            6,
                                            11,
                                        ),
                                        state: Checked(
                                            "Int",
                                        ),
                                    },
                                ],
                            ),
                            span: Span(
                                4,
                                13,
                            ),
                            state: Checked(
                                "Int",
                            ),
                        },
                    },
                    span: Span(
                        0,
                        13,
                    ),
                    state: Checked(
                        "Int",
                    ),
                },
                rh: Expression {
                    kind: Infix {
                        op: Power,
                        lh: Expression {
                            kind: Block(
                                [
                                    Expression {
                                        kind: LiteralInt(
                                            7,
                                        ),
                                        span: Span(
                                            17,
                                            18,
                                        ),
                                        state: Checked(
                                            "Int",
                                        ),
                                    },
                                ],
                            ),
                            span: Span(
                                16,
                                19,
                            ),
                            state: Checked(
                                "Int",
                            ),
                        },
                        rh: Expression {
                            kind: LiteralInt(
                                2,
                            ),
                            span: Span(
                                22,
                                23,
                            ),
                            state: Checked(
                                "Int",
                            ),
                        },
                    },
                    span: Span(
                        16,
                        23,
                    ),
                    state: Checked(
                        "Int",
                    ),
                },
            },
            span: Span(
                0,
                23,
            ),
            state: Checked(
                "Int",
            ),
        },
    ],
)
