src/tests/snapshots/alloy__tests__snapshot_tests@block-exprs.alloy.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/cases/block-exprs.alloy
---
[
    Token {
        kind: Number,
        span: Span(
            0,
            2,
        ),
        text: "12",
    },
    Token {
        kind: Asterisk,
        span: Span(
            2,
            3,
        ),
        text: "*",
    },
    Token {
        kind: LBrace,
        span: Span(
            4,
            5,
        ),
        text: "{",
    },
    Token {
        kind: Number,
        span: Span(
            6,
            7,
        ),
        text: "4",
    },
    Token {
        kind: Plus,
        span: Span(
            8,
            9,
        ),
        text: "+",
    },
    Token {
        kind: Number,
        span: Span(
            10,
            11,
        ),
        text: "5",
    },
    Token {
        kind: RBrace,
        span: Span(
            12,
            13,
        ),
        text: "}",
    },
    Token {
        kind: Minus,
        span: Span(
            14,
            15,
        ),
        text: "-",
    },
    Token {
        kind: LBrace,
        span: Span(
            16,
            17,
        ),
        text: "{",
    },
    Token {
        kind: Number,
        span: Span(
            17,
            18,
        ),
        text: "7",
    },
    Token {
        kind: RBrace,
        span: Span(
            18,
            19,
        ),
        text: "}",
    },
    Token {
        kind: Caret,
        span: Span(
            20,
            21,
        ),
        text: "^",
    },
    Token {
        kind: Number,
        span: Span(
            22,
            23,
        ),
        text: "2",
    },
]
