src/tests/snapshots/alloy__tests__snapshot_tests@function-calls.alloy-2.snap
---
source: src/tests/mod.rs
expression: "Parser::new(&lexer).parse().unwrap()"
input_file: src/tests/cases/function-calls.alloy
---
Ast(
    [
        Expression {
            kind: MethodCall {
                caller: Expression {
                    kind: LiteralInt(
                        2,
                    ),
                    span: Span(
                        0,
                        1,
                    ),
                    ty: "Unit",
                },
                name: "to_unit",
                args: [],
            },
            span: Span(
                0,
                11,
            ),
            ty: "Unit",
        },
        Expression {
            kind: VariableDecl {
                name: "a",
                value: Expression {
                    kind: LiteralBool(
                        true,
                    ),
                    span: Span(
                        16,
                        20,
                    ),
                    ty: "Unit",
                },
                mutable: true,
                ty: None,
            },
            span: Span(
                13,
                20,
            ),
            ty: "Unit",
        },
        Expression {
            kind: MethodCall {
                caller: Expression {
                    kind: LiteralInt(
                        3,
                    ),
                    span: Span(
                        21,
                        22,
                    ),
                    ty: "Unit",
                },
                name: "to_unit",
                args: [
                    Expression {
                        kind: Ident(
                            "a",
                        ),
                        span: Span(
                            31,
                            32,
                        ),
                        ty: "Unit",
                    },
                    Expression {
                        kind: LiteralInt(
                            4,
                        ),
                        span: Span(
                            33,
                            34,
                        ),
                        ty: "Unit",
                    },
                ],
            },
            span: Span(
                21,
                35,
            ),
            ty: "Unit",
        },
    ],
)
