src/tests/snapshots/alloy__tests__snapshot_tests@function-calls.alloy-3.snap
---
source: src/tests/mod.rs
expression: checked.unwrap()
input_file: src/tests/cases/function-calls.alloy
---
Ast(
    [
        Expression {
            kind: MethodCall {
                caller: Expression {
                    kind: LiteralInt(
                        2,
                    ),
                    span: Span(
                        0,
                        1,
                    ),
                    state: Checked(
                        "Int",
                    ),
                },
                name: "to_unit",
                args: [],
            },
            span: Span(
                0,
                11,
            ),
            state: Checked(
                "Unit",
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "a",
                value: Expression {
                    kind: LiteralBool(
                        true,
                    ),
                    span: Span(
                        16,
                        20,
                    ),
                    state: Checked(
                        "Bool",
                    ),
                },
                mutable: true,
                ty: None,
            },
            span: Span(
                13,
                20,
            ),
            state: Checked(
                "Unit",
            ),
        },
        Expression {
            kind: VariableAssignment {
                name: "a",
                value: Expression {
                    kind: LiteralBool(
                        false,
                    ),
                    span: Span(
                        23,
                        28,
                    ),
                    state: Checked(
                        "Bool",
                    ),
                },
            },
            span: Span(
                21,
                28,
            ),
            state: Checked(
                "Unit",
            ),
        },
        Expression {
            kind: MethodCall {
                caller: Expression {
                    kind: LiteralInt(
                        3,
                    ),
                    span: Span(
                        29,
                        30,
                    ),
                    state: Checked(
                        "Int",
                    ),
                },
                name: "to_unit",
                args: [
                    Expression {
                        kind: Ident(
                            "a",
                        ),
                        span: Span(
                            39,
                            40,
                        ),
                        state: Checked(
                            "Bool",
                        ),
                    },
                    Expression {
                        kind: LiteralInt(
                            4,
                        ),
                        span: Span(
                            41,
                            42,
                        ),
                        state: Checked(
                            "Int",
                        ),
                    },
                ],
            },
            span: Span(
                29,
                43,
            ),
            state: Checked(
                "Unit",
            ),
        },
    ],
)
